--- a/about.html
+++ b/about.html
@@ -1,46 +1,55 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Måns Andersson</title>
-    <link rel="icon" type="image/svg+xml" href="/M_logo.svg">
-  </head>
-  <body class="bg-slate-100">
-    <div id="app"></div>
-    <header class="flex min-w-full justify-center items-center">
-        <nav class="max-w-[700px] flex justify-center gap-x-5 md:gap-x-28 py-3 font-light text-gray-600 md:text-lg">
-          <a href="/"><img class="p-1 h-7 rounded-full hover:bg-gray-800" src="/M_logo.svg"/></a>
-          <a class="hover:text-gray-800 px-3 bg-gray-300 rounded-xl" href="/about.html">About</a>
-          <a class="hover:text-gray-800 px-3" href="/posts.html">Posts</a>
-          <a class="hover:text-gray-800 px-3" href="/projects.html">Projects</a>
-        </nav>
-      </header>
-    <main class="pt-20 px-12 md:px-24 max-w-[700px] mx-auto">
-        <h1 class="text-gray-800 font-sans font-bold text-3xl">About</h1>
-        <p class="text-gray-800 pt-3 text-sm">
-            My name is Måns Andersson. I am a software engineer based in Stockholm, Sweden.
-            I have a passion for technology, I like building cool things, and I am always trying to learn more and improve.<br/>
-            When I am not behind the desk I could be found lifting weights, climbing, skiing or reading.
-        </p>
-        <h1 class="text-gray-800 font-sans font-bold text-3xl mt-8">Work</h1>
-        <p class="text-gray-800 pt-3 text-sm">
-            2+ years of professional development expreience.<br/><br/>
-            My first software-related job was teaching others how to code.
-            This was a great experience and I enjoy trying to make seemingly complex things easier for others
-            to understand.<br/>
-            Now I work as a Software Engineer at Keyfactor,
-            building PKI products to help secure all kinds of IT infrastructures.
-        </p>
-        <h1 class="text-gray-800 font-sans font-bold text-3xl mt-8">Skills</h1>
-        <p class="text-gray-800 pt-3 text-sm">
-          In my professional career I have worked mostly with back-end development, primarily in Java and Python.
-          From my master's degree in computer science I have a good foundation of CS, math and software engineering knowledge.<br/><br/>
-          Front-end development and design is something I have pursued mostly on my own time.
-          One result of those efforts is the webpage that you are currently on.
-          The technologies I've worked the most with is React and Tailwind.<br/><br/>
-        </p>
-    </main>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Måns Andersson</title>
+  <link rel="icon" type="image/svg+xml" href="/M_logo.svg">
+</head>
+
+<body class="bg-slate-100">
+  <div id="app"></div>
+  <header class="flex min-w-full justify-center items-center">
+    <nav class="max-w-[700px] flex justify-center gap-x-5 md:gap-x-28 py-3 font-light text-gray-600 md:text-lg">
+      <a href="/"><img class="p-1 h-7 rounded-full hover:bg-gray-800" src="/M_logo.svg" /></a>
+      <a class="hover:text-gray-800 px-3 bg-gray-300 rounded-xl" href="/about.html">About</a>
+      <a class="hover:text-gray-800 px-3" href="/posts.html">Posts</a>
+      <a class="hover:text-gray-800 px-3" href="/projects.html">Projects</a>
+    </nav>
+  </header>
+  <main class="pt-20 px-12 md:px-24 max-w-[700px] mx-auto">
+    <h1 class="text-gray-800 font-sans font-bold text-3xl">About</h1>
+    <p class="text-gray-800 pt-3 text-sm">
+      My name is Måns Andersson. I am a software engineer based in Stockholm, Sweden.
+      I have a passion for technology, I like building cool things, and I am always trying to learn more and
+      improve.<br />
+      When I am not behind the desk I could be found lifting weights, climbing, skiing or reading.
+    </p>
+    <h1 class="text-gray-800 font-sans font-bold text-3xl mt-8">Work</h1>
+    <p class="text-gray-800 pt-3 text-sm">
+      2+ years of professional development expreience.<br /><br />
+      My first software-related job was teaching others how to code.
+      This was a great experience and I enjoy trying to make seemingly complex things easier for others
+      to understand.<br />
+      Now I work as a Software Engineer at Keyfactor,
+      building PKI products to help secure all kinds of IT infrastructures.
+    </p>
+    <div class="flex flex-col">
+      <div class="flex gap-1">
+      </div>
+    </div>
+    <h1 class="text-gray-800 font-sans font-bold text-3xl mt-8">Skills</h1>
+    <p class="text-gray-800 pt-3 text-sm">
+      In my professional career I have worked mostly with back-end development, primarily in Java and Python.
+      From my master's degree in computer science I have a good foundation of CS, math and software engineering
+      knowledge.<br /><br />
+      Front-end development and design is something I have pursued mostly on my own time.
+      One result of those efforts is the webpage that you are currently on.
+      The technologies I've worked the most with is React and Tailwind.<br /><br />
+    </p>
+  </main>
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
