Finish About page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link rel="icon" type="image/svg+xml" href="/M_logo.svg">
 </head>
 
-<body class="bg-slate-100">
+<body class="bg-slate-100 w-full">
   <div id="app"></div>
-  <header class="flex min-w-full justify-center items-center">
-    <nav class="max-w-[700px] flex justify-center gap-x-5 md:gap-x-28 py-3 font-light text-gray-600 md:text-lg">
+  <header class="sticky top-0 z-20 bg-slate-100">
+    <nav class="max-w-[700px] mx-auto flex justify-center gap-x-5 md:gap-x-28 py-3 font-light text-gray-600 md:text-lg">
       <a href="/"><img class="p-1 h-7 rounded-full hover:bg-gray-800" src="/M_logo.svg" /></a>
       <a class="hover:text-gray-800 px-3" href="/about.html">About</a>
       <a class="hover:text-gray-800 px-3" href="/posts.html">Posts</a>
