Add initial posts page

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       <a class="hover:text-gray-800 px-3" href="/projects.html">Projects</a>
     </nav>
   </header>
-  <main class="pt-20 px-12 md:px-24 max-w-[700px] mx-auto">
+  <main class="pt-20 px-12 md:px-24 max-w-[700px] mx-auto mb-96">
     <h1 class="text-gray-800 font-sans font-bold text-3xl">About</h1>
     <p class="text-gray-800 pt-3 text-sm">
       My name is Måns Andersson. I am a software engineer based in Stockholm, Sweden.
@@ -70,7 +70,6 @@
       One result of those efforts is the webpage that you are currently on.
       The technologies I've worked the most with is React and Tailwind.<br /><br />
     </p>
-
   </main>
   <script type="module" src="/main.js"></script>
 </body>
