Add medium post

--- a/posts.html
+++ b/posts.html
@@ -24,10 +24,18 @@
       I try to write posts about tech related things others could find useful.
       But also about other random things that interest me.
     </p>
-    <a href="https://medium.com/@mans_andersson/hiking-kebnekaise-swedens-highest-mountain-4d8d979c397" target="_blank" class="flex text-lg text-gray-800 font-semibold">
-      <time class="text-gray-600">Aug 25, 2023</time>
-      <span class="px-2">Hiking Kebnekaise, Sweden’s highest mountain</span>
-    </a>
+    <div class="flex flex-col gap-3 group">
+      <a href="https://medium.com/@mans_andersson/how-to-set-up-a-minimal-hot-reload-environment-for-tailwind-in-2024-ae01b9514955"
+        target="_blank" class="flex text-sm text-gray-800 font-semibold w-full group-hover:opacity-50 hover:!opacity-100">
+        <span class="text-gray-600 w-32">Feb 13, 2024</span>
+        <p class="w-full">How to set up a minimal hot-reload environment for Tailwind in 2024</p>
+      </a>
+      <a href="https://medium.com/@mans_andersson/hiking-kebnekaise-swedens-highest-mountain-4d8d979c397"
+        target="_blank" class="flex text-sm text-gray-800 font-semibold w-full group-hover:opacity-50 hover:!opacity-100">
+        <span class="text-gray-600 w-32">Aug 25, 2023</span>
+        <p class="w-full">Hiking Kebnekaise, Sweden’s highest mountain</p>
+      </a>
+    </div>
   </main>
   <script type="module" src="/main.js"></script>
 </body>
